# mobile-android

./: .gitignore  build.gradle  config.gradle  project.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/cradle/rancune/once/: AppContext.kt  Constant.kt
app/src/main/java/cradle/rancune/once/view/: MainActivity.kt
app/src/main/res/layout/: once_activity_jni_test.xml  once_activity_main.xml  once_activity_mediacode_video.xml  once_activity_pcm_player.xml  once_activity_record_audio.xml  once_item_main_page.xml
app/src/main/res/values/: strings.xml
core/: build.gradle
core/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
internal/appbase/: build.gradle
internal/appbase/src/main/: AndroidManifest.xml
internal/core/: build.gradle
media/ffmpeg/: build.gradle
media/ffmpeg/src/main/: AndroidManifest.xml
media/ffmpeg/src/main/cpp/: CMakeLists.txt  cradle_rancune_media_ffmpeg_FFmpeg2.h  native-lib.cpp
media/mediabase/: build.gradle
media/mediabase/src/main/: AndroidManifest.xml
media/mediabase/src/main/java/cradle/rancune/media/: AudioConfig.kt
media/opengl/: build.gradle
media/opengl/src/main/: AndroidManifest.xml
media/opengl/src/main/assets/: base.frag  base.vert
media/opengl/src/main/cpp/: CMakeLists.txt
media/opengl/src/main/cpp/j4a/: j4a_base.c  j4a_base.h
media/opengl/src/main/cpp/j4a/class/android/os/: Build.c
media/opengl/src/main/cpp/util/: GLUtils.cpp  GLUtils.h  LogUtils.h
media/opengl/src/main/res/layout/: opengl_activity_egl.xml  opengl_activity_opengl.xml  opengl_activity_opengl_main.xml  opengl_activity_saturation.xml  opengl_reycle_item_main_page.xml
media/opengl/src/main/res/values/: strings.xml
media/player/: build.gradle
media/player/src/main/: AndroidManifest.xml
media/record/: build.gradle
media/record/src/main/: AndroidManifest.xml
media/record/src/main/java/cradle/rancune/audio/: AudioConfig.kt  AudioEncoder.kt
media/record/src/main/java/cradle/rancune/media/: AudioConfig.kt  AudioEncoder.kt  EncodedData.kt  MediaSource.kt  OnDataListener.kt  OnErrorListener.kt  OnInfoListener.kt
media/record/src/main/java/cradle/rancune/utils/: ADTSUtils.java
tech/aop/: build.gradle
tech/aop/src/main/: AndroidManifest.xml
tech/jni/: build.gradle
tech/jni/src/main/: AndroidManifest.xml
tech/jni/src/main/cpp/: CMakeLists.txt  cradle_rancune_tech_jni_JniTest.h  jnitest.c  jnitest.h  logutils.h
video/record/: build.gradle
video/record/src/main/: AndroidManifest.xml
widget/common/: build.gradle
widget/common/src/main/: AndroidManifest.xml
(+71 files in other folders)
